fix bad spacing on the room editor

--- a/src/components/Room.scss
+++ b/src/components/Room.scss
@@ -2,6 +2,9 @@
 
 .Room {
   width: 100%;
+  &.--is-being-edited {
+    width: auto;
+  }
   header {
     position: absolute;
     z-index: 500;
